--- a/FIT5032_MyAssignment/FIT5032_MyAssignment/Views/Moves/Create.cshtml
+++ b/FIT5032_MyAssignment/FIT5032_MyAssignment/Views/Moves/Create.cshtml
@@ -20,7 +20,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MoveName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MoveName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.MoveName, new SelectListItem[]{}, new { id = "Gender", @class = "form-control" } )
+
                 @Html.ValidationMessageFor(model => model.MoveName, "", new { @class = "text-danger" })
             </div>
         </div>
