--- a/FIT5032_MyAssignment/FIT5032_MyAssignment/Views/_ViewStart.cshtml
+++ b/FIT5032_MyAssignment/FIT5032_MyAssignment/Views/_ViewStart.cshtml
@@ -1,3 +1,13 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    if (this.User.IsInRole("admin"))
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+    else if (this.User.IsInRole("user"))
+    {
+        Layout = "~/Views/Shared/_LayoutU.cshtml";
+    }
+    else {
+        Layout = "~/Views/Shared/_LayoutN.cshtml";
+    }
 }
