--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Index.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Index.cshtml
@@ -1,30 +1,47 @@
 ﻿@using Microsoft.AspNet.Identity
-@model IEnumerable<FIT5032_AssignmentX.Models.MovePlans>
+@model PagedList.IPagedList<FIT5032_AssignmentX.Models.MovePlans>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Movements Plan";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Movements Plan</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm("Index", "MovePlans", FormMethod.Get))
+{
+    <p>
+        Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+        <input type="submit" class="btn btn-primary" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.MoveName)
+            @Html.ActionLink("Move Name", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Time)
+            @Html.ActionLink("Round", "Index", new { sortOrder = ViewBag.RoundSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Round)
+            @Html.ActionLink("Time", "Index", new { sortOrder = ViewBag.TimeSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Date)
+            @Html.ActionLink("Date", "Index", new { sortOrder = ViewBag.DateSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
+        @if (User.IsInRole("admin"))
+        {
+            <th>
+                @Html.ActionLink("User ID", "Index", new { sortOrder = ViewBag.UserIDSortParm, currentFilter = ViewBag.CurrentFilter })
+            </th>
+        }
         <th></th>
     </tr>
 
@@ -37,18 +54,18 @@
                     @Html.DisplayFor(modelItem => item.MoveName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Time)
+                    @Html.DisplayFor(modelItem => item.Round)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Round)
+                    @Html.DisplayFor(modelItem => item.Time)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 @if (User.IsInRole("admin"))
-                { 
+                {
                     <td>
-                    @Html.DisplayFor(modelItem => item.UserID)
+                        @Html.DisplayFor(modelItem => item.UserID)
                     </td>
                 }
                 <td>
@@ -61,3 +78,9 @@
     }
 
 </table>
+
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
