--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Home/Index.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Home/Index.cshtml
@@ -11,7 +11,14 @@
 <div class="row">
     <div class="col-md-6">
         <div class="card">
-            <img src="~/img/small1.jpg" width="550" alt="...">
+
+            <img srcset="~/img/small1-320w.jpg 320w,
+                        ~/img/small1.jpg"
+                 sizes="(max-width: 400px) 320px,
+                         640px"
+                 src="~/img/small1.jpg"
+                 width="550"
+                 alt="...">
             <div class="caption">
                 <h3 class="text-center">Basic Exercise</h3>
                 <p class="text-center"><a href="#" class="btn btn-primary" role="button">Learn more &raquo;</a></p>
@@ -21,7 +28,13 @@
 
     <div class="col-md-6">
         <div class="card">
-            <img src="~/img/small2.jpg" width="550" alt="...">
+            <img srcset="~/img/small2-320w.jpg 320w,
+                        ~/img/small2.jpg"
+                 sizes="(max-width: 400px) 320px,
+                         640px"
+                 src="~/img/small2.jpg"
+                 width="550"
+                 alt="...">
             <div class="caption">
                 <h3 class="text-center">Boxing Exercise</h3>
                 <p class="text-center"><a href="#" class="btn btn-primary" role="button">Learn more &raquo;</a></p>
