--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Create.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Create.cshtml
@@ -66,7 +66,7 @@
     @Scripts.Render("~/bundles/bootstrap")
 <script>
     $('.datepicker').datepicker({
-        format: "mm/dd/yyyy"
+        format: "dd/MM/yyyy"
     });
 </script>
     @Scripts.Render("~/bundles/jqueryval")
