--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/RecipePlans/Create.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/RecipePlans/Create.cshtml
@@ -63,7 +63,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     <script>
     $('.datepicker').datepicker({
-        format: "mm/dd/yyyy"
+        format: "dd/MM/yyyy"
     });
     </script>
     @Scripts.Render("~/bundles/jqueryval")
