--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Home/Contact.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Home/Contact.cshtml
@@ -1,17 +1,33 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div id="container" style="width: 600px;height:400px;"></div>
+
+<script>
+    var options = {
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: '我的第一个图表'
+        },
+        xAxis: {
+            categories: ['苹果', '香蕉', '橙子']
+        },
+        yAxis: {
+            title: {
+                text: '吃水果个数'
+            }
+        },
+        series: [{
+            name: '小明',
+            data: [1, 0, 4]
+        }, {
+            name: '小红',
+            data: [5, 7, 3]
+        }]
+    };
+    var chart = Highcharts.chart('container', options);
+</script>
