--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Index.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Index.cshtml
@@ -14,6 +14,10 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
+<p>
+    @Html.ActionLink("View Report", "Report")
+</p>
+
 @using (Html.BeginForm("Index", "MovePlans", FormMethod.Get))
 {
     <p>
@@ -84,3 +88,4 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.Page
 
 @Html.PagedListPager(Model, page => Url.Action("Index",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
