--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Report.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/MovePlans/Report.cshtml
@@ -38,7 +38,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="card">
-            <p class="text-center"><a href="~/MovePlans/Report2" class="btn btn-primary" role="button">Send Email</a></p>
+            <p class="text-center"><a href="~/MovePlans/UploadFile" class="btn btn-primary" role="button">Send Email</a></p>
         </div>
     </div>
 
@@ -49,7 +49,4 @@
     </div>
 </div>
 
-<form action="/MovePlans/UploadFile" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" /><br />
-    <input type="submit" value="upload" />
-</form>
+
