--- a/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Shared/_Layout.cshtml
+++ b/FIT5032_AssignmentX/FIT5032_AssignmentX/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
     <script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="~/Scripts/tinymce/tinymce.min.js"></script>
+    <script src="~/Scripts/jquery.rateit.min.js"></script>
+    <link href="~/Content/rateit.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -37,7 +39,6 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Map", "Index", "MapLocations")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @if (User.IsInRole("user") || User.IsInRole("admin"))
                     {
                         <li>@Html.ActionLink("My calender", "Plan", "Home")</li>
